# exquisite-verse

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html
.github/workflows/: deploy.yml
exquisite-verse-core/: Cargo.toml
exquisite-verse-core/src/: lib.rs  poem.rs
exquisite-verse-ui/: Cargo.toml
exquisite-verse-ui/src/: lib.rs  main.rs  ui.rs
exquisite-verse-wasm/: .gitignore  Cargo.toml  README.md  index.html  test.html
exquisite-verse-wasm/src/: lib.rs
js-embed/: embed.html  serve.sh
src/: lib.rs  main.rs  poem.rs  ui.rs  wasm.rs
