[package]
name = "exquisite_verse"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
bincode = "2.0.0"
serde = { version = "1.0.215", features = ["derive"] }
egui = "0.31.1"
eframe = { version = "0.31.1", features = ["web_screen_reader"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlCanvasElement", "Window"] }
console_error_panic_hook = "0.1.7"
