[package]
name = "exquisite-verse-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
exquisite-verse-core = { path = "../exquisite-verse-core" }
exquisite-verse-ui = { path = "../exquisite-verse-ui" }
eframe = { version = "0.31.1", features = ["web_screen_reader"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlCanvasElement", "Window"] }
console_error_panic_hook = "0.1.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlCanvasElement", "Window"] }
